k8s/worker-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: worker-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      component: worker
  template:
    metadata:
      labels:
        component: worker
    spec:
      containers:
        - name: worker
          image: warunaman/multi-worker
          resources:             # <-- ADDED: Resource Definition
            requests:
              cpu: "100m"        # Requesting 100 millicores (0.1 CPU core)
              memory: "256Mi"    # Requesting 256 Megabytes
            limits:
              cpu: "300m"        # Allowing up to 300 millicores
              memory: "512Mi"    # Allowing up to 512 Megabytes
